styles.css
/* ----------------------------------------------------
Hero Section
---------------------------------------------------- */
section.hero {
    margin-bottom: 4rem;
    max-width: 80rem;
    margin: auto;
    padding: 0 5rem;
}


section.hero h1 {
    margin-top: 2rem;
    margin-bottom: 2rem;
    font-size: 5.5rem;
    text-align: center;
    text-shadow: 0 0 1000px var(--primary-color);
    color: var(--primary-white);
}

section.hero h1 span {
    padding: 0 5rem;
    background-color: var(--primary-bg);
    border: 4px solid var(--primary-stroke);
    text-shadow: none;
    border-radius: 5rem;
    color: var(--primary-color);
}

section.hero p {
    text-align: center;
    font-weight: 400;
    margin-bottom: 3rem;
    font-size: 1.2rem;
    color: var(--primary-white);

}

section.hero p span {
    color: var(--primary-color);
    text-shadow: 0 0 15px var(--primary-color);
    font-weight: 500;
}

/* ----------------------------------------------------
Clients Section
---------------------------------------------------- */

section.our-clients {
    padding: 5rem 5rem;
    position: relative;

}

.filter-buttons button {
    background: #21e855;
    border: none;
    padding: 10px 18px;
    margin: 0 auto 3rem auto;
    border-radius: 6px;
    cursor: pointer;
    font-weight: 600;
    transition: all 0.3s;
    color: #000;
}

.filter-buttons .active {
    background: #000;
    color: black;
}

section.our-clients .clients {
    max-width: 75rem;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1.5rem;

}

section.our-clients .clients .client {

    /* width: 150px; */
    text-align: center;


    width: min-content;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
}

section.our-clients .clients .client img {
    height: 9rem;
    /* filter: grayscale(1110%); */
    transition: all ease 0.5s;
    border: 2px solid var(--primary-color);
    padding: 0.35rem;
    border-radius: 50rem;
    margin: 0 auto;
    display: block;
    aspect-ratio: 1 / 1 !important;
    /* force square shape */
    object-fit: contain !important;
    /* prevents stretching */
}

section.our-clients .clients .client img:hover {
    filter: grayscale(0%);
    animation: floatAnimation 10s infinite alternate;

}



@keyframes floatAnimation {
    0% {
        transform: translateY(5px);
        /* Starting position */
    }

    25% {
        transform: translateY(-5px);
        /* 1st Quarter of the circle */
    }

    50% {
        transform: translateY(5px);
        /* 2nd Quarter of the circle */
    }

    75% {
        transform: translateY(-5px);
        /* 3rd Quarter of the circle */
    }

    100% {
        transform: translateY(5px);
        /* Ending position */
    }
}

section.our-clients .clients .client p {
    font-weight: 500;
    text-align: center;
    margin-top: 0;
    font-size: 1.2rem;

}


/* ----------------------------------------------------
About us Section
---------------------------------------------------- */
section.about {
    margin: 5rem 0;
    padding: 0 5rem;
}

section.about .container {
    max-width: 80rem;
    margin: auto;
    display: flex;
    justify-content: space-between;
    gap: 1.5rem;

}

section.about .container .img-cont {
    flex: 1;
    display: flex;
    justify-content: left;
    align-items: center;
}

section.about .container .img-cont img {
    height: 25rem;
}

section.about .container .text-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

section.about .container .text-container h2 {
    font-size: 3rem;
    color: var(--primary-color);
}

section.about .container .text-container p {
    /* font-family: "montserrat" ; */
    font-weight: 500;
    line-height: 30px;
    font-size: 1.2rem;
    margin-bottom: 1rem;
}

section.about .container .text-container .box {
    background-color: #021A2C;
    padding: 1rem 2rem;
    border-radius: 1rem;
    width: 25rem;
}

section.about .container .text-container .box h3 {
    font-size: 1.6rem;
    color: var(--primary-color);
    margin-bottom: .75rem;
}

section.about .container .text-container .box p {
    /* font-family: "montserrat"; */
    line-height: 25px;
    font-size: 1rem;
    margin-bottom: 0;
}

section.about .container .text-container .box a {
    padding: 0.5rem 1rem;
    display: inline-block;
    margin-top: 1rem;
    font-weight: 600;
}


/* ----------------------------------------------------
Case Study Section
---------------------------------------------------- */

section.case {
    padding: 5rem 5rem 0 5rem;
    margin-top: 5rem !important;
    border-top: 0.5px solid grey;

}

section.case .container {
    box-sizing: border-box;
    max-width: 80rem;
    margin: auto;
    margin-bottom: 2rem;
    border: 2px solid var(--primary-stroke);
    border-radius: 2rem;
    padding: 5rem 2rem 2rem 2rem;

}

section.case .container a.pdf {
    display: none;
}

@media(max-width: 1275px) {
    section.case .container a {
        display: none;
    }

    section.case .container a.pdf {
        display: block;
    }


}

section.case .container pre {
    text-align: left;
    line-height: 120%;
    font-weight: 500;
    font-size: 3.5rem;
    position: relative;
}

section.case .container img {
    height: 10rem;
    position: absolute;
    top: -3.5rem;
    left: 23rem;
}

section.case .container pre span {
    font-size: 4.5rem;
    font-weight: 700;
}

/* Client Case Study Boxes */
section.case .container .case-study-clients-container {
    background-color: var(--secondary-bg);
    padding: 2rem 3rem 2rem 2rem;
    border-radius: 1rem;
    border: 2px solid var(--primary-stroke);
    margin-top: 1.5rem !important;
}

section.case .case-study-client {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

section.case .case-study-client .txt-cont h2 {
    color: var(--primary-color);
    font-size: 2rem;
}
/* ... */

